--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
             <span class="puntos">:</span>
             <span class="min">00</span>
             <span class="puntos">:</span>
-            <span class="seg">00</span>
+            <span class="seg">00</span>  
+        </div>
+        <div class="botones">
+            <button class="start"><img src="img/start.svg"></button>
+            <button class="pause"><img src="img/pause.svg"></button>
+            <button class="reset"><img src="img/reset.svg"></button>
         </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
